--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>THIS IS A H1</h1>
     <p id="paragraph">This is a paragraph</p#>
     <div>
-        <p>This is a p element inside a div</p>
-        <p>This is aother p element inside a div</p>
+        <p>This is a p elelment inside a div</p>
+        <p>This is aother p elemnet inside a div</p>
     </div>
     <button>This is a button</button>
     <br>
